--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST=192.168.4.110
 DB_PORT=3306
 DB_DATABASE=sistemacontable
-DB_USERNAME=root
-DB_PASSWORD=12345
+DB_USERNAME=kbsg
+DB_PASSWORD=kbsg
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
