--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=192.168.4.110
 DB_PORT=3306
 DB_DATABASE=sistemacontable
 DB_USERNAME=root
-DB_PASSWORD=12345
+DB_PASSWORD=adm12345
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
